fix: id visible

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,6 +1,8 @@
 @import './base.scss';
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 :root {
-  font-family: Poppins, Arial, sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
 
